Fix a z-index issue

--- a/app/src/styles/components/_entryPopup.scss
+++ b/app/src/styles/components/_entryPopup.scss
@@ -78,7 +78,7 @@
   width: 100vw;
   height: 100vh;
   animation: fadeIn 0.3s ease-in-out;
-  z-index: 2000;
+  z-index: 20000;
 }
 
 .imageModalContent {
